--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "vitest": "^4.0.10"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
