--- a/webapp/package.json
+++ b/webapp/package.json
@@ -38,6 +38,7 @@
     "express": "^4.21.2",
     "googleapis": "^144.0.0",
     "idb-keyval": "^6.2.2",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
